# CUDA_vs_OpenCL

./: .gitignore  CMakeLists.txt  README.md
cpu_test/: CMakeLists.txt  cpu_matmul.cpp  cpu_simple_operation.cpp
cuda_test/: CMakeLists.txt  cuda_fft.cu  cuda_matmul.cu  cuda_matmul_shared.cu  cuda_simple_operation.cu  main.cu
opencl_test/: CMakeLists.txt  main.cpp  opencl_fft.cpp  opencl_matmul.cpp  opencl_simple_operation.cpp
